[package]
name = "gain_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
simple_logger = "5.1.0"
log = "0.4.28"
serde = {  version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"]}
rustfft = "6.4.1"
num-complex = "0.4.6"
rust_xlsxwriter = "0.92.2"